updated pom.xml & readme