@@ -90,115 +90,62 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.4</version>
-                <executions>
-                    <execution>
-                        <id>enforce</id>
-                        <configuration>
-                            <rules>
-                                <requireUpperBoundDeps/>
-                            </rules>
-                        </configuration>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                     <parallel>all</parallel>
-	                 <threadCount>2</threadCount>
-	                 <skip>${skip.parallel}</skip>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <includes>
-                        <include>**/cucumber/*.java</include>
-                    </includes>
-                    <reuseForks>true</reuseForks>
-                    <forkCount>2</forkCount>
-                    <argLine>-Xmx512m</argLine>
-                    <systemPropertyVariables>
-	                     <webdriver.driver>${webdriver.driver}</webdriver.driver>
-	                </systemPropertyVariables>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin> -->
-            
-            
 	            <plugin>
-			    <artifactId>maven-failsafe-plugin</artifactId>
-			    <version>2.18.1</version>
-			    <configuration>
-			        <includes>
-			            <include>**/cucumber/*.java</include>
-			        </includes>
-			        <excludes>
-			            <exclude>**/*WithFailures.java</exclude>
-			        </excludes>
-			        <argLine>-Xmx512m</argLine>
-			        <parallel>classes</parallel>
-			        <threadCount>4</threadCount>
-			        <forkCount>4</forkCount>
-			    </configuration>
-			    <executions>
-			        <execution>
-			            <goals>
-			                <goal>integration-test</goal>
-			                <goal>verify</goal>
-			            </goals>
-			        </execution>
-			    </executions>
-	        </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>net.serenity-bdd.maven.plugins</groupId>
-                <artifactId>serenity-maven-plugin</artifactId>
-                <version>${serenity.maven.version}</version>
-                <dependencies>
-                  <dependency>
-                    <groupId>net.serenity-bdd</groupId>
-                    <artifactId>serenity-core</artifactId>
-                    <version>${serenity.version}</version>
-                  </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <id>serenity-reports</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>aggregate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-failsafe-plugin</artifactId>
+	                <version>2.20</version>
+	                <configuration>
+	                   <includes>
+	                        <include>**/cucumber/*.java</include>
+	                    </includes>
+	                    <!-- http://stackoverflow.com/questions/32987998/junit-and-surefire-parallel-tests-forkcount-threadcount -->
+	                    <parallel>classes</parallel>
+	                    <threadCount>1</threadCount>
+	                    <reuseForks>${run.parallel}</reuseForks>
+	                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+	                    <systemPropertyVariables>
+	                        <tags>${tags}</tags>
+	                    </systemPropertyVariables>
+	                </configuration>
+	                <executions>
+	                    <execution>
+	                        <goals>
+	                            <goal>integration-test</goal>
+	                            <goal>verify</goal>
+	                        </goals>
+	                    </execution>
+	                </executions>
+	            </plugin>
+	            <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-compiler-plugin</artifactId>
+	                <version>3.2</version>
+	                <configuration>
+	                    <source>1.8</source>
+	                    <target>1.8</target>
+	                </configuration>
+               </plugin>
+               <plugin>
+	                <groupId>net.serenity-bdd.maven.plugins</groupId>
+	                <artifactId>serenity-maven-plugin</artifactId>
+	                <version>${serenity.maven.version}</version>
+	                <dependencies>
+	                  <dependency>
+	                    <groupId>net.serenity-bdd</groupId>
+	                    <artifactId>serenity-core</artifactId>
+	                    <version>${serenity.version}</version>
+	                  </dependency>
+	                </dependencies>
+	                <executions>
+	                    <execution>
+	                        <id>serenity-reports</id>
+	                        <phase>post-integration-test</phase>
+	                        <goals>
+	                            <goal>aggregate</goal>
+	                        </goals>
+	                    </execution>
+	                </executions>
+             </plugin>
         </plugins>
     </build>
   
